update env variables

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@
 DISCORD_TOKEN=
 # Channel ID that the bot will run in
 DISCORD_CHANNEL=
+# 
+RSA_BOT_ROLE_ID=
+RSA_ADMIN_ROLE_ID=
 
 ## OPTIONAL SETTINGS
 # USE AT YOUR OWN RISK: Wether the bot should wait for a confirmation before executing trades in the CLI
