add encryption key env variable

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ DISCORD_CHANNEL=
 # 
 RSA_BOT_ROLE_ID=
 RSA_ADMIN_ROLE_ID=
+ENCRYPTION_KEY=
 
 ## OPTIONAL SETTINGS
 # USE AT YOUR OWN RISK: Wether the bot should wait for a confirmation before executing trades in the CLI
