update package requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,6 @@ setuptools==73.0.1
 tastytrade==8.2
 vanguard-api==0.2.5
 -e git+https://github.com/NelsonDane/webull.git@ef14ae63f9e1436fbea77fe864df54847cf2f730#egg=webull
-cryptography
+cryptography==43.0.0
+selenium==4.24.0
+webdriver-manager==4.0.2
