--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ fennel-invest-api==1.1.0
 firstrade==0.0.30
 GitPython==3.1.43
 public-invest-api==1.0.4
+dspac_invest_api==0.1.3
 pyotp==2.9.0
 python-dotenv==1.0.1
 requests==2.32.3
