--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,10 @@ HEADLESS="true"
 # CHASE=CHASE_USERNAME:CHASE_PASSWORD:CELL_PHONE_LAST_FOUR:DEBUG(Optional) TRUE/FALSE
 CHASE=
 
+# dSPAC
+# DSPAC="DSPAC_USERNAME:DSPAC_PASSWORD"
+DSPAC=
+
 # Fennel
 # FENNEL=FENNEL_EMAIL
 FENNEL=
